--- a/vuaro_test_muzeevas/templates/base.html
+++ b/vuaro_test_muzeevas/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru" ng-app="GalleryApp">
     <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,12 +21,14 @@
     <link rel="stylesheet" href="{{ STATIC_URL }}Gallery/css/blueimp-gallery.min.css">
     <link rel="stylesheet" href="{{ STATIC_URL }}Bootstrap-Image-Gallery/css/bootstrap-image-gallery.min.css">
 
+    <script src="{{ STATIC_URL }}js/angular/angular.min.js"></script>
+    <script src="{{ STATIC_URL }}js/controllers.js"></script>
 
     </head>
 
-    <body>
 
-        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <body ng-controller="PictureListCtrl">
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
                     <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
@@ -71,19 +73,21 @@
                             <h1>{% block page_h1 %}Последние изображения{% endblock %}</h1>
                         </div>
 
-                        <div class="pictures">
-                            {% for picture in pictures %}
-                                <a href="{{ picture.image.url }}" data-gallery>
-                                    <img class="img-thumbnail" alt="200x200" src="{{ picture.image.small.url }}" style="width: 200px; height: 200px;">
-                                </a>
-                            {% empty %}
-                                <div class="alert alert-info" role="alert">
-                                    Изображений нет!
-                                </div>
-                            {% endfor %}
+                        {% block pictures %}
+                            <div class="pictures">
+                                {% for picture in pictures %}
+                                    <a href="{{ picture.image.url }}" class="picture" data-gallery>
+                                        <img class="img-thumbnail" alt="200x200" src="{{ picture.image.url }}" style="width: 200px; height: 200px;">
+                                    </a>
+                                {% empty %}
+                                    <div class="alert alert-info" role="alert">
+                                        Изображений нет!
+                                    </div>
+                                {% endfor %}
 
 
-                        </div>
+                            </div>
+                        {% endblock %}
 
                         {% if my and pictures_count %}
                             <div class="email_block">
@@ -134,6 +138,36 @@
         <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.js"></script>
 
         <script src="{{ STATIC_URL }}js/script.js"></script>
+        <script>
+
+            function new_picture(data){
+                return '<a href="'+ data.picture_image_url +'" id="picture_id'+ data.picture_id +'" class="picture" data-gallery><img class="img-thumbnail" alt="200x200" src="'+ data.picture_image_small_url + '" style="width: 200px; height: 200px;"></a>';
+            }
+
+            var socketUrl = "ws://127.0.0.1:8888/websocket";
+
+            var ws = new WebSocket(socketUrl);
+
+            ws.onopen = function() {
+                ws.send("{'user_id': '{{ user.id }}'}");
+            };
+
+            ws.onmessage = function (evt) {
+                var data = JSON.parse(evt.data);
+
+                if (data.event_type == 'new_image'){
+                    if (!$('#picture_id'+data.picture_id).length){
+                        var picture_html = new_picture(data);
+                        console.log(picture_html);
+                        $('.pictures').prepend(picture_html);
+                    }
+                }
+
+            };
+
+
+
+        </script>
 
         {% if not user.is_authenticated %}
             {% include 'registration/include/registration_modal.html' %}
